RESOLVED FIXED255118
Fix incorrect uses of containingBlock in ComputedStyleExtractor rendererCanHaveTrimmedMargin
https://bugs.webkit.org/show_bug.cgi?id=255118
Summary Fix incorrect uses of containingBlock in ComputedStyleExtractor rendererCanHa...
Sammy Gill
Reported 2023-04-06 14:12:09 PDT
This function incorrectly uses the term "containingBlock" without first determining the formatting context it is in. It should first determine the formatting context and then use either "formattingContextRoot" or the correct name of the formatting context root (e.g. flexbox/grid)
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-06 14:12:42 PDT
Sammy Gill
Comment 2 2023-04-28 12:30:38 PDT
EWS
Comment 3 2023-05-02 20:11:38 PDT
Committed 263616@main (69af735e2796): <https://commits.webkit.org/263616@main> Reviewed commits have been landed. Closing PR #13284 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.