[margin-trim] Refactor rendererCanHaveTrimmedMargin to remove incorrect uses of containingBlock https://bugs.webkit.org/show_bug.cgi?id=255118 rdar://107726833

Reviewed by Alan Baradlay.

The code was using a variable that was misleadingly named containingBlock
and using it in contexts when the renderer was in a flexbox or grid.
We should only be using this name when the renderer is a block level
box.

The code has been refactored first to check if the renderer is first a
flex or grid item and then using the parent() to check for margin-trim.
If the box is a block level box instead, we will instead use the
containingBlock().

* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::rendererCanHaveTrimmedMargin):

Canonical link: https://commits.webkit.org/263616@main